--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,14 +19,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.7.2"
-dbt-core = "^1.0.0"
+dbt-core = "~1.4"
 ibm-db = "^3.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.2"
 tox = "^3.25.1"
 python-dotenv = "^0.20.0"
-dbt-tests-adapter = "^1.2.0"
+dbt-tests-adapter = "~1.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.8"]
