--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 isolated_build = true
-envlist = python3.7,python3.8,python3.9,python3.10
+envlist = python3.7,python3.8,python3.9,python3.10,python3.11
 
 [testenv]
 whitelist_externals = pytest
